--- a/payload_boot/CMakeLists.txt
+++ b/payload_boot/CMakeLists.txt
@@ -11,17 +11,17 @@ endif()
 project(payload_boot C ASM)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O2 -mcpu=cortex-a9 -mthumb-interwork -fno-builtin -Wno-main -DFW_360")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O2 -mcpu=cortex-a9 -mthumb-interwork -fno-builtin -Wno-main")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ${CMAKE_CURRENT_SOURCE_DIR}/link.x -nostartfiles -nodefaultlibs -nostdlib")
 
 add_executable(payload_boot
-  reset.s
-  main.c
-  arm_opcode.c
-  hen.c
-  enso/lowio.c
-  enso/syscon.c
+  src/reset.s
+  src/main.c
+  src/arm_opcode.c
+  src/enso/lowio.c
+  src/enso/syscon.c
+  ../kbl_loader.c
 )
 
 target_link_libraries(payload_boot
